tests/fixtures/valid/fix_int_return.torel
unit fixtures.fix_int_return;

export proc main() -> Int32 {
    fix answer: Int32 = 42;
    return answer;
}
